# Sentinel-HFT

./: .gitignore  Dockerfile  Makefile  README.md  TESTING_GUIDE.md  docker-compose.yml  pyproject.toml  vercel.json
ai/: __init__.py  backends.py  explainer.py  fact_extractor.py  pattern_detector.py  prompts.py  report_generator.py
cli/: __init__.py  main.py
demo/: expected_metrics.json  market_data.csv
docs/: AI_AGENTS.md  ARCHITECTURE.md  AUDIT_FIX_PLAN.md  COMPLIANCE.md  DEMO_SCRIPT.md  DEMO_UI.md  H1_instrumentation_shell.md  IMPLEMENTATION_PLAN.md  INSTALL.md  INTEGRATION_GUIDE.md  INTEGRATION_READINESS.md  PROJECT_STATUS.mermaid  ROADMAP.md  SENTINEL_CORE_AUDIT.md  USAGE.md  USE_CASES.md  V2_PLAN.md  keyrock-2pager.md  keyrock-market-fit-brief.md
host/: __init__.py  metrics.py  report.py  trace_decode.py
monitoring/: prometheus.yml  prometheus_alerts.yml
protocol/: __init__.py  context.py  health.py  risk_correlation.py
rtl/: async_fifo.sv  fault_injector.sv  fault_pkg.sv  instrumented_pipeline.sv  kill_switch.sv  position_limiter.sv  rate_limiter.sv  reset_sync.sv  risk_audit_log.sv  risk_gate.sv  risk_pkg.sv  sentinel_shell.sv  sentinel_shell_v12.sv  sentinel_sva.sv  stage_timer.sv  stub_latency_core.sv  sync_fifo.sv  tb_latency_attribution.sv  tb_risk_gate.sv  trace_pkg.sv  trace_pkg_v12.sv
scripts/: rca_nightly.cron  smoke_demo.sh  test_all.py
sentinel-web/: .env.local.example  .gitignore  README.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
sentinel_hft/: __init__.py
sim/: Makefile  sim_main.cpp  sim_risk.cpp  tb_sentinel_shell.sv
tests/: conftest.py  test_acceptance.py  test_adapter_v12.py  test_ai_api.py  test_ai_backends.py  test_alert_log.py  test_audit_log.py  test_compliance_api.py  test_compliance_crosswalk.py  test_compliance_stack.py  test_demo_api.py  test_deribit_demo.py  test_e2e_demo.py  test_h1_backpressure.py  test_h1_determinism.py  test_h1_functional_equivalence.py  test_h1_overflow.py  test_h1_stub_latency.py  test_h4_ai_explainer.py  test_h5_correlation.py  test_h5_health_integration.py  test_h5_protocol_context.py  test_hl_cli.py  test_hl_usecases.py  test_hyperliquid.py  test_onchain.py  test_phase10_cli.py  test_phase1_formats.py  test_phase2_sequence.py  (+13 more)
(+240 files in other folders)
