[project]
name = "sentinel-hft"
version = "2.2.0"
description = "Latency verification and regression testing for FPGA trading systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sentinel-HFT Team"}
]
keywords = [
    "fpga",
    "hft",
    "trading",
    "latency",
    "verification",
    "observability",
    "rtl",
    "hardware",
    "metrics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
api = [
    "flask>=3.0.0",
]
prometheus = [
    "prometheus-client>=0.17.0",
]
slack = [
    "requests>=2.31.0",
]
ai = [
    "anthropic>=0.18.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
all = [
    "sentinel-hft[api,prometheus,slack,ai,dev]",
]

[project.scripts]
sentinel-hft = "sentinel_hft.cli.main:main"

[project.urls]
Homepage = "https://github.com/BorjaTR/Sentinel-HFT"
Documentation = "https://github.com/BorjaTR/Sentinel-HFT#readme"
Repository = "https://github.com/BorjaTR/Sentinel-HFT"
Issues = "https://github.com/BorjaTR/Sentinel-HFT/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["host*", "wind_tunnel*", "cli*", "ai*", "protocol*", "sentinel_hft*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
